welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:29: error: ')' expected but 'if' found.
    if (estFaceMur()){
    ^